--- a/style.css
+++ b/style.css
@@ -56,3 +56,10 @@
 *{
   font-family: 'Titillium Web', sans-serif;
 }
+.card:hover{
+  opacity: 0.7;
+  cursor: pointer;
+}
+.asd{
+  border: 1px solid black;
+}
